syntax = "proto3";

option go_package = "kofoworola/pbpractice/grpc/v1/conversion";

package conversion;

import "google/api/annotations.proto";

message ConvertAmountRequest {
	// input_currency is the currecny we are converting from (currently only supports EUR)
	optional string input_currency = 1;
	// amount is the amount to be converted
	optional float amount = 2;
	// output_currency is the currency to be converted to
	optional string output_currency = 3;
}

message ConvertAmountResponse {
	optional float amount=1;
}

message GetRateRequest {
	optional string from = 1;
	optional string to = 2;
}

message GetRateResponse {
	optional float rate = 1;
}

service ConversionService {
	// ConvertAmount lets you convert an arbitrary amount from one currency to the other
	rpc ConvertAmount(ConvertAmountRequest) returns (ConvertAmountResponse){
		option (google.api.http) = {
			post: "/v1/conversion"
			body: "*"
		};
	}

	// GetRate gets the converstion rate from <from> to <to>
	rpc GetRate(GetRateRequest) returns (GetRateResponse){
		option(google.api.http) = {
			get: "/v1/rates"
		};
	}
}

